test/error/tablefind.luau
table.find({ "one", "two", "three" }, "two", -1)
